--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TuTuApp</string>
     <string name="splash_screen_logo">Splash screen logo</string>
+    <string name="train_image">Train image</string>
+    <string name="connection_error_ic">Connection Error</string>
 </resources>
