Create DetailsScreen, DetailsScreenViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="splash_screen_logo">Splash screen logo</string>
     <string name="train_image">Train image</string>
     <string name="connection_error_ic">Connection Error</string>
+    <string name="ic_close">icon close</string>
 </resources>
